fix(VE): 🐛 show "less useful buttons" on small viewport

--- a/skinStyles/extensions/VisualEditor/ext.visualEditor.core.less
+++ b/skinStyles/extensions/VisualEditor/ext.visualEditor.core.less
@@ -406,15 +406,15 @@
 }
 
 /* Hide less useful buttons on small viewport */
-@media ( max-width: @max-width-breakpoint-tablet ) {
-	.ve-ui-toolbar-group {
-		&-format,
-		&-style,
-		&-help {
-			display: none;
-		}
-	}
-}
+// @media ( max-width: @max-width-breakpoint-tablet ) {
+// 	.ve-ui-toolbar-group {
+// 		&-format,
+// 		&-style,
+// 		&-help {
+// 			display: none;
+// 		}
+// 	}
+// }
 
 .citizen-page-header {
 	pointer-events: all !important;
